feature: update all auth logic
